@@ -31,12 +31,10 @@ volatile unsigned char bit;
 
 void testBug(void)
 {
-#ifndef __SDCC // Enable when bug gets fixed
     LATCbits.LATC0 = 1;
     mask = 0x00;
     bit = 0;
     set_bits(bit);
     ASSERT(!LATCbits.LATC0);
-#endif
 }
 
